# IterativeClosestPoint

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO  build.bat  clean.bat  configure.bat  install.bat  launch.json
CMake/: dependencies.cmake  icpDumpVariable.cmake
ICP/: CMakeLists.txt  config.h.in  multiMeshInternals.cxx  multiMeshInternals.h  vtk.module  vtkICP.cxx  vtkICP.h  vtkImplicitPolyDataDistance2.cxx  vtkImplicitPolyDataDistance2.h  vtkImplicitPolyDataIntersection.cxx  vtkImplicitPolyDataIntersection.h  vtkMultiMeshAlignment.cxx  vtkMultiMeshAlignment.h  vtkPolyDataCorrespondenceFilter.cxx  vtkPolyDataCorrespondenceFilter.h
ICP/Testing/Cxx/: CMakeLists.txt  TestKabsch.cxx  TestPolyDataCorrespondenceFilter.cxx
ICP/Testing/Python/: BiDirectional.py  BiDirectionalTest.py  CMakeLists.txt  MultiMesh.py  RegistrationDemo.py  euler.py
ICP/icp/: config.h.in  icp.cxx  icp.h  kabsch.cxx  kabsch.h  plane2plane.cxx  plane2plane.h  plane2plane.hpp  point2plane.cxx  point2plane.h  point2point.cxx  point2point.h  point2point.hpp
Source/: CMakeLists.txt  vtkICP.h  vtkImplicitPolyDataDistance2.cxx  vtkImplicitPolyDataDistance2.h  vtkPolyDataCorrespondenceFilter.cxx  vtkPolyDataCorrespondenceFilter.h
Source/icp/: icp.cxx  icp.hpp  point2plane.cxx  point2plane.hpp  point2point.cxx  point2point.hpp
Wrapping/Python/: CMakeLists.txt  icp.py
Wrapping/Python/icpmodules/: __init__.py.in  all.py.in
Wrapping/Python/icpmodules/util/: __init__.py  io.py  misc.py  scene_utils.py
